@@ -263,6 +263,9 @@ ILboolean ilLoadIcnsL(const void *Lump, ILuint Size);
 ILboolean ilLoadIff(ILconst_string FileName);
 ILboolean ilLoadIffF(ILHANDLE File);
 ILboolean ilLoadIffL(const void *Lump, ILuint Size);
+ILboolean ilIsValidJp2(ILconst_string FileName);
+ILboolean ilIsValidJp2F(ILHANDLE File);
+ILboolean ilIsValidJp2L(const void *Lump, ILuint Size);
 ILboolean ilLoadJp2(ILconst_string FileName);
 ILboolean ilLoadJp2F(ILHANDLE File);
 ILboolean ilLoadJp2L(const void *Lump, ILuint Size);
